--- a/scss/Base/_reset.scss
+++ b/scss/Base/_reset.scss
@@ -8,3 +8,10 @@ body{
     padding: 0;
     box-sizing: border-box;
 }
+h1, h2, h3, h4, h5, h6, p, span, ul, li, a, div, section{
+    margin: 0;
+    padding: 0;
+}
+ul{
+    list-style: none;
+}
