--- a/scss/Helpers/_mixin.scss
+++ b/scss/Helpers/_mixin.scss
@@ -8,3 +8,19 @@
     justify-content: $justify-content;
     align-items: $align-items;
 }
+
+@mixin setFont($font-size, $font-weight){
+    font-size: $font-size;
+    font-weight: $font-weight;
+}
+
+@mixin setImgSize($width, $height) {
+    width: $width;
+    height: $height;
+}
+
+@mixin hoverEffect{
+    &:hover{
+        opacity: 0.8;
+    }
+}
