--- a/scss/Helpers/_variables.scss
+++ b/scss/Helpers/_variables.scss
@@ -1,9 +1,11 @@
 //-------COLOR-------
 $color-white: #fff;
-$color-text: #00acc7;
+$color-blue-100: #00acc7;
+$color-blue-200: #228dc7;
 $color-green: #42db5f;
 $color-orange: #fc9b00;
 $color-seperator: #ebebf2;
+$color-gray: #707070;
 
 //------FONT---------
 $font-size-1: 10px;
@@ -19,7 +21,9 @@ $font-size-9: 30px;
 //---------WIDTH--------
 $width-button: 120px;
 $width-logo: 120px;
+$width-card: 270px;
 
 
 //--------HEIGHT--------
 $height-button: 30px;
+$height-card: 255px;
