--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@
 @import './Helpers/mixin';
 
 @import './Components/button';
+@import './Components/card';
 
 @import './Layout/header';
 @import './Pages/home';
