--- a/scss/Components/_button.scss
+++ b/scss/Components/_button.scss
@@ -4,9 +4,29 @@
     height: $height-button;
     border: none;
     text-align: center;
+    text-transform: uppercase;
+    background-color: $color-white;
+    cursor: pointer;
+    @include hoverEffect;
 }
 
 .btn_select{
     background-image: linear-gradient(225deg,#228dc7,#00acc7);
     color: $color-white;
+}
+
+.btn_arrow{
+    background-color: $color-blue-100;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    font-size: 25px;
+    padding: 0 10px;
+    cursor: pointer;
+    @include hoverEffect;
+}
+
+.btn_viewall{
+    border: 1px solid $color-blue-100;
+    color: $color-blue-100;
 }
