--- a/css/home.css
+++ b/css/home.css
@@ -140,7 +140,10 @@ ul {
   justify-content: space-between;
   align-items: center;
   height: 50px;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2) !important; }
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2) !important;
+  position: fixed;
+  width: 100%;
+  z-index: 10000; }
   .Header .Header__logo {
     cursor: pointer;
     padding-left: 15px; }
