--- a/scss/Base/_reset.scss
+++ b/scss/Base/_reset.scss
@@ -3,15 +3,19 @@ html{
     font-size: 16px;
 }
 
-body{
+h1, h2, h3, h4, h5, h6, p, span, ul, li, a, div, section, body, img{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-h1, h2, h3, h4, h5, h6, p, span, ul, li, a, div, section{
-    margin: 0;
-    padding: 0;
-}
 ul{
     list-style: none;
+}
+
+body, html{
+    height: 100%;
+}
+
+img{
+    vertical-align: middle;
 }
