--- a/scss/Helpers/_mixin.scss
+++ b/scss/Helpers/_mixin.scss
@@ -13,6 +13,11 @@
     font-size: $font-size;
     font-weight: $font-weight;
 }
+@mixin setFontWithColor($font-size, $font-weight, $color){
+    font-size: $font-size;
+    font-weight: $font-weight;
+    color: $color;
+}
 
 @mixin setImgSize($width, $height) {
     width: $width;
@@ -23,4 +28,22 @@
     &:hover{
         opacity: 0.8;
     }
+}
+
+@mixin styleForInputTrack{
+    width: 100%;
+    height: 4px;
+    border: 1px solid $color-blue-100;
+    background-color: $color-white;
+    border-radius: 50px;
+}
+
+@mixin styleForInputThumb($adjustment: 0){
+    border: 1px solid $color-blue-100;
+    height: 18px + $adjustment;
+    width: 18px + $adjustment;
+    border-radius: 50%;
+    background-color: $color-blue-100;
+    cursor: pointer;
+    margin-top: -9px;
 }
