--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,8 @@
 
 @import './Components/button';
 @import './Components/card';
+@import './Components/ranges-slider';
 
 @import './Layout/header';
 @import './Pages/home';
+@import './Pages/loanofferoverview';
